--- a/base/backend-deployment.yaml
+++ b/base/backend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name:  backend-dep
-  namespace: Demo-app
+  namespace: demo-app
 spec:
   replicas: 1
   selector:
