--- a/base/backend-service.yaml
+++ b/base/backend-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-svc
-  namespace: Demo-app
+  namespace: demo-app
 spec:
   ports:
     - port: 80
