--- a/overlay/dev/backend-service-patch.yaml
+++ b/overlay/dev/backend-service-patch.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-svc
-  namespace: Demo-app
+  namespace: demo-app
 spec:
   type: LoadBalancer
