--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -3,9 +3,14 @@ bases:
 patchesStrategicMerge:
   - backend-deployment-patch.yaml
   - backend-service-patch.yaml
+  - frontend-deployment-patch.yaml
+  - frontend-service-patch.yaml
 commonLabels:
   env: dev
 images:
 - name: trnproj1.azurecr.io/backend@sha256
   newName: amr158/argocd-demo-backend
+  newTag: 0.0.0
+- name: trnproj1.azurecr.io/frontend@sha256
+  newName: amr158/argocd-demo-frontend
   newTag: 0.0.0
