--- a/base/backend-service.yaml
+++ b/base/backend-service.yaml
@@ -7,6 +7,7 @@ spec:
   ports:
     - port: 80
       targetPort: 8080
+      nodePort: 31214
       protocol: TCP
   selector:
     app: backend-dep
