--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx
+  namespace: demo-app
   annotations:
     ingress.kubernetes.io/ssl-redirect: "false"
 spec:
