--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -3,5 +3,5 @@ resources:
 - backend-service.yaml
 - frontend-deployment.yaml
 - frontend-service.yaml
-
+- frontend-ingress.yaml
 - backend-ingress.yaml
