--- a/base/frontend-ingress.yaml
+++ b/base/frontend-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: frontend-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /api
+    nginx.ingress.kubernetes.io/rewrite-target: /app
     ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
