--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrites: /
+    nginx.ingress.kubernetes.io/rewrite-target: /
     ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
