--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -10,6 +10,13 @@ spec:
   rules:
   - http:
       paths:
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: backend-svc
+            port:
+              number: 80
       - path: /app
         pathType: Prefix
         backend:
