--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -12,5 +12,5 @@ images:
   newName: amr158/argocd-demo-backend
   newTag: 0.1.0
 - name: trnproj1.azurecr.io/frontend@sha256
-  newName: inginx
+  newName: nginx
   newTag: latest
