--- a/base/frontend-deployment.yaml
+++ b/base/frontend-deployment.yaml
@@ -1,51 +1,71 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name:  frontend-dep
+#   namespace: demo-app
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: frontend-dep
+#   template:
+#     metadata:
+#       labels:
+#         app: frontend-dep
+#     spec:
+#       automountServiceAccountToken: false
+#       securityContext:
+#         seccompProfile:
+#           type: RuntimeDefault
+#       containers:
+#         - name: frontend
+#           image: "trnproj1.azurecr.io/frontend@sha256"
+#           imagePullPolicy: Always
+#           ports:
+#             - name: http
+#               containerPort: 8080
+#           livenessProbe:
+#             httpGet:
+#               path: /
+#               port: http
+#           readinessProbe:
+#             httpGet:
+#               path: /
+#               port: http
+#           volumeMounts:
+#             - mountPath: /var/run
+#               name: tmpfs-1
+#             - mountPath: /var/cache/nginx
+#               name: tmpfs-2
+#           securityContext:
+#             readOnlyRootFilesystem: true
+#             allowPrivilegeEscalation: false
+#             runAsUser: 11000
+#             runAsGroup: 11000
+#             capabilities:
+#               drop: ["NET_RAW", "SYS_TIME"]
+#       volumes:
+#           - name: tmpfs-1
+#             emptyDir: {}
+#           - name: tmpfs-2
+#             emptyDir: {}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name:  frontend-dep
   namespace: demo-app
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: frontend-dep
+      app: nginx
   template:
     metadata:
       labels:
-        app: frontend-dep
+        app: nginx
     spec:
-      automountServiceAccountToken: false
-      securityContext:
-        seccompProfile:
-          type: RuntimeDefault
       containers:
-        - name: frontend
-          image: "trnproj1.azurecr.io/frontend@sha256"
-          imagePullPolicy: Always
-          ports:
-            - name: http
-              containerPort: 8080
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
-          volumeMounts:
-            - mountPath: /var/run
-              name: tmpfs-1
-            - mountPath: /var/cache/nginx
-              name: tmpfs-2
-          securityContext:
-            readOnlyRootFilesystem: true
-            allowPrivilegeEscalation: false
-            runAsUser: 11000
-            runAsGroup: 11000
-            capabilities:
-              drop: ["NET_RAW", "SYS_TIME"]
-      volumes:
-          - name: tmpfs-1
-            emptyDir: {}
-          - name: tmpfs-2
-            emptyDir: {}
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
