--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -9,5 +9,5 @@ commonLabels:
   env: dev
 images:
 - name: trnproj1.azurecr.io/backend@sha256
-  newName: amr158/argocd-demo-backend
-  newTag: 0.1.0
+  newName: nginx
+  newTag: 1.14.2
