--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -9,5 +9,8 @@ commonLabels:
   env: dev
 images:
 - name: trnproj1.azurecr.io/backend@sha256
+  newName: amr158/argocd-demo-backend
+  newTag: 0.0.0
+- name: trnproj1.azurecr.io/frontend@sha256
   newName: nginx
   newTag: 1.14.2
