--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -17,7 +17,7 @@ spec:
             name: backend-svc
             port:
               number: 80
-      - path: /app
+      - path: /
         pathType: Prefix
         backend:
           service:
