--- a/base/frontend-deployment.yaml
+++ b/base/frontend-deployment.yaml
@@ -37,13 +37,13 @@ spec:
               name: tmpfs-1
             - mountPath: /var/cache/nginx
               name: tmpfs-2
-          securityContext:
-            readOnlyRootFilesystem: true
-            allowPrivilegeEscalation: false
-            runAsUser: 11000
-            runAsGroup: 11000
-            capabilities:
-              drop: ["NET_RAW", "SYS_TIME"]
+          # securityContext:
+          #   readOnlyRootFilesystem: true
+          #   allowPrivilegeEscalation: false
+          #   runAsUser: 11000
+          #   runAsGroup: 11000
+          #   capabilities:
+          #     drop: ["NET_RAW", "SYS_TIME"]
       volumes:
           - name: tmpfs-1
             emptyDir: {}
