--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -10,7 +10,8 @@ commonLabels:
 images:
 - name: trnproj1.azurecr.io/backend@sha256
   newName: amr158/argocd-demo-backend
-  newTag: 0.0.0
+  # newTag: 0.0.0
+  newTag: 0.1.0
 - name: trnproj1.azurecr.io/frontend@sha256
   newName: amr158/argocd-demo-frontend
   newTag: 0.4.0
