disabled frontend to run only backend containers

--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,7 +1,7 @@
 resources:
+- namespace.yaml
 - backend-deployment.yaml
 - backend-service.yaml
-- frontend-deployment.yaml
-- frontend-service.yaml
+# - frontend-deployment.yaml
+# - frontend-service.yaml
 - ingress.yaml
-- namespace.yaml
