--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -1,8 +1,8 @@
 bases:
 - ../../base
-patchesStrategicMerge:
-  - backend-deployment-patch.yaml
-  - backend-service-patch.yaml
+# patchesStrategicMerge:
+  # - backend-deployment-patch.yaml
+  # - backend-service-patch.yaml
   # - frontend-deployment-patch.yaml
   # - frontend-service-patch.yaml
 commonLabels:
