added namespace to overlay files and removed it from base

--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -1,5 +1,8 @@
 bases:
-- ../../base
+  - ../../base
+
+namespace: dev
+
 # patchesStrategicMerge:
   # - backend-deployment-patch.yaml
   # - backend-service-patch.yaml
