--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,7 +1,6 @@
 resources:
-- namespace.yaml
-# - backend-deployment.yaml
-# - backend-service.yaml
+- backend-deployment.yaml
+- backend-service.yaml
 # - frontend-deployment.yaml
 # - frontend-service.yaml
 - ingress.yaml
