--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,7 +1,8 @@
 
 resources:
-- backend-deployment.yaml
-- backend-service.yaml
-# - frontend-deployment.yaml
-# - frontend-service.yaml
-- ingress.yaml
+  - namespaces.yaml
+  - backend-deployment.yaml
+  - backend-service.yaml
+  # - frontend-deployment.yaml
+  # - frontend-service.yaml
+  - ingress.yaml
