--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,6 +1,6 @@
 
 resources:
-  - namespaces.yaml
+  - namespace.yaml
   - backend-deployment.yaml
   - backend-service.yaml
   # - frontend-deployment.yaml
