--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -1,4 +1,4 @@
-bases:
+resources:
   - ../../base
 
 namespace: dev
@@ -14,10 +14,10 @@ commonLabels:
 
 # define latest images to be used in this env
 images:
-- name: trnproj1.azurecr.io/backend@sha256
-  newName: amr158/argocd-demo-backend
-  # newTag: 0.0.0
-  newTag: 0.1.0
-- name: trnproj1.azurecr.io/frontend@sha256
-  newName: amr158/argocd-demo-frontend
-  newTag: 0.4.0
+  - name: trnproj1.azurecr.io/backend@sha256
+    newName: amr158/argocd-demo-backend
+    # newTag: 0.0.0
+    newTag: 0.1.0
+  - name: trnproj1.azurecr.io/frontend@sha256
+    newName: amr158/argocd-demo-frontend
+    newTag: 0.4.0
