--- a/base/backend-deployment.yaml
+++ b/base/backend-deployment.yaml
@@ -1,8 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  backend-dep
-  namespace: demo-app
+  name: backend-dep
 spec:
   replicas: 1
   selector:
@@ -13,14 +12,14 @@ spec:
       labels:
         app: backend-dep
     spec:
-      automountServiceAccountToken: false
-      securityContext:
-        seccompProfile:
-          type: RuntimeDefault
+      # automountServiceAccountToken: false
+      # securityContext:
+      #   seccompProfile:
+      #     type: RuntimeDefault
       containers:
         - name: backend
           image: "trnproj1.azurecr.io/backend@sha256"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - name: http
               containerPort: 8080
