--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -15,7 +15,8 @@ commonLabels:
 # define latest images to be used in this env
 images:
   - name: trnproj1.azurecr.io/backend@sha256
-    newName: amr158/argocd-demo-backend
+    newName: amr158/argocd-demo-frontend
+    # newName: amr158/argocd-demo-backend
     # newTag: 0.0.0
     newTag: 0.1.0
   - name: trnproj1.azurecr.io/frontend@sha256
