--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,8 +1,5 @@
 
 resources:
   - namespace.yaml
-  - backend-deployment.yaml
-  - backend-service.yaml
-  # - frontend-deployment.yaml
-  # - frontend-service.yaml
-  - ingress.yaml
+  - ./backend
+  - ./frontend
