using public .net app for testing

--- a/base/backend/deployment.yaml
+++ b/base/backend/deployment.yaml
@@ -22,15 +22,15 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
-              containerPort: 8080
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+              containerPort: 80
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
           # securityContext:
           #   runAsUser: 11000
           #   runAsGroup: 11000
