--- a/base/backend/service.yaml
+++ b/base/backend/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ports:
     - port: 80
-      targetPort: 8080
+      targetPort: http
       protocol: TCP
   selector:
     app: backend-dep
