--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -15,8 +15,9 @@ commonLabels:
 # define latest images to be used in this env
 images:
   - name: trnproj1.azurecr.io/backend@sha256
-    newName: amr158/argocd-demo-frontend
+    # newName: amr158/argocd-demo-frontend
     # newName: amr158/argocd-demo-backend
+    newName: mcr.microsoft.com/dotnet/samples:aspnetapp
     # newTag: 0.0.0
     newTag: 0.1.0
   - name: trnproj1.azurecr.io/frontend@sha256
