--- a/base/backend/service.yaml
+++ b/base/backend/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ports:
     - port: 80
-      targetPort: http
+      targetPort: 80
       protocol: TCP
   selector:
     app: backend-dep
