--- a/base/backend/deployment.yaml
+++ b/base/backend/deployment.yaml
@@ -22,7 +22,8 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
-              containerPort: 80
+              # containerPort: 80
+              containerPort: 8080
           # livenessProbe:
           #   httpGet:
           #     path: /
