--- a/base/apps/frontend/ingress.yaml
+++ b/base/apps/frontend/ingress.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: ingress-fe
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    # kubernetes.io/ingress.class: nginx
+    # nginx.ingress.kubernetes.io/rewrite-target: /
     ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   rules:
