--- a/base/apps/backend/service.yaml
+++ b/base/apps/backend/service.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   ports:
     - port: 80
-      # targetPort: 80
-      targetPort: 8080
+      targetPort: 80
       protocol: TCP
   selector:
     app: backend-dep
+  type: ClusterIP
