--- a/base/apps/backend/ingress.yaml
+++ b/base/apps/backend/ingress.yaml
@@ -8,7 +8,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /api
+      - path: /app1
         pathType: Prefix
         backend:
           service:
