--- a/base/core/kong-app.yaml
+++ b/base/core/kong-app.yaml
@@ -3,18 +3,12 @@ kind: Application
 metadata:
   name: kong
   namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: argocd
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: kong
-    repoURL: https://github.com/mikesparr/gcp-cicd-demo-config
-    targetRevision: HEAD
-  syncPolicy:
-    automated:
-      selfHeal: true
-      prune: true
+    chart: kong/kong
+    repoURL: https://charts.konghq.com
+    # targetRevision: 7.6.1
