--- a/base/core/kong-app.yaml
+++ b/base/core/kong-app.yaml
@@ -9,6 +9,6 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    chart: kong/kong
+    chart: kong
     repoURL: https://charts.konghq.com
     targetRevision: 2.13.1
