--- a/base/core/prometheus.yaml
+++ b/base/core/prometheus.yaml
@@ -3,7 +3,12 @@ kind: Application
 metadata:
   name: prometheus
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
+  syncPolicy:
+    automated: 
+      selfHeal: true
   project: default
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
