--- a/base/core/prometheus.yaml
+++ b/base/core/prometheus.yaml
@@ -9,11 +9,11 @@ spec:
   syncPolicy:
     automated: 
       selfHeal: true
+  destination:
+    namespace: dev
+    server: https://kubernetes.default.svc
   project: default
   source:
+    chart: kube-prometheus-stack
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 41.5.1
-    chart: kube-prometheus-stack
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: prometheus
