--- a/namespaces.yaml
+++ b/namespaces.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: dev
-# ---
-# apiVersion: v1
-# kind: Namespace
-# metadata:
-#   name: monitoring
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
