--- a/base/apps/backend/ingress.yaml
+++ b/base/apps/backend/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-be
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
-    kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: kong
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
