--- a/cluster/application-kong-helm.yaml
+++ b/cluster/application-kong-helm.yaml
@@ -17,7 +17,7 @@ spec:
     repoURL: https://charts.konghq.com
     targetRevision: 2.13.1
     # targetRevision: 1.7.0
-    chart: kong/kong
+    chart: kong
     helm:
       values: |
         extraEnv: |
