--- a/cluster/application-kong-helm.yaml
+++ b/cluster/application-kong-helm.yaml
@@ -18,23 +18,23 @@ spec:
     targetRevision: 2.13.1
     # targetRevision: 1.7.0
     chart: kong
-    helm:
-      values: |
-        extraEnv: |
-          - name: KEYCLOAK_HTTP_PORT
-            value: "80"
-          - name: KEYCLOAK_HTTPS_PORT
-            value: "443"
-        proxy:
-          # HTTP plain-text traffic
-          http:
-            enabled: true
-            servicePort: 80
-            containerPort: 80
-          tls:
-            enabled: true
-            servicePort: 443
-            containerPort: 443
-        ingressController:
-          enabled: true
+    # helm:
+    #   values: |
+    #     extraEnv: |
+    #       - name: KEYCLOAK_HTTP_PORT
+    #         value: "80"
+    #       - name: KEYCLOAK_HTTPS_PORT
+    #         value: "443"
+    #     proxy:
+    #       # HTTP plain-text traffic
+    #       http:
+    #         enabled: true
+    #         servicePort: 80
+    #         containerPort: 80
+    #       tls:
+    #         enabled: true
+    #         servicePort: 443
+    #         containerPort: 443
+    #     ingressController:
+    #       enabled: true
 
