--- a/base/apps/backend/ingress.yaml
+++ b/base/apps/backend/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ingress-be
   annotations:
-    ingress.kubernetes.io/ssl-redirect: "true"
+    # ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/ingress.class: kong
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
