--- a/base/apps/backend/ingress.yaml
+++ b/base/apps/backend/ingress.yaml
@@ -11,7 +11,7 @@ spec:
   - http:
       paths:
       - path: /api
-        pathType: Prefix
+        pathType: ImplementationSpecific
         backend:
           service:
             name: backend-svc
