backend downgrade to 0.0.0

--- a/base/apps/backend/ingress.yaml
+++ b/base/apps/backend/ingress.yaml
@@ -9,7 +9,9 @@ metadata:
     # nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - http:
+
+  - host: the-host-value
+    http:
       paths:
       - path: /api
         pathType: ImplementationSpecific
