--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
   - namespaces.yaml
-  - applicaiton-prometheus.yaml
+  # - applicaiton-prometheus.yaml
   - application-kong-helm.yaml
   - application-apps-dev.yaml
