--- a/base/apps/backend/nginx-deployment.yaml
+++ b/base/apps/backend/nginx-deployment.yaml
@@ -28,7 +28,7 @@ spec:
       targetPort: 80
       protocol: TCP
   selector:
-    app: nginx-deployment
+    app: nginx
   type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
