--- a/cluster/namespaces.yaml
+++ b/cluster/namespaces.yaml
@@ -8,6 +8,13 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: tick
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: kong
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
