--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -13,7 +13,8 @@ helmCharts:
     version: 2.1.1
     releaseName: tick
     valuesInline:
-      existingSecret: influxdb-auth
+      adminUser:
+        existingSecret: influxdb-auth
       # password: admin 
       # token: admin
 
