added influxdb2-auth secret

--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -14,9 +14,9 @@ helmCharts:
     releaseName: tick
     valuesInline:
       adminUser:
-        existingSecret: influxdb-auth
-      # password: admin 
-      # token: admin
+        # existingSecret: influxdb-auth
+        password: admin 
+        token: admin
 
     # namespace: tick-stack
 
