--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -40,8 +40,9 @@ helmCharts:
     valuesInline:
       influxURL: http://tick-influxdb2.tick
       persistence.enabled: "false"
-      influxdb-user: admin 
-      influxdb-password: password
+      existingSecret: influxdb-auth
+      # influxdb-user: admin 
+      # influxdb-password: password
 
 secretGenerator:
 - name: influxdb-auth
@@ -50,8 +51,10 @@ secretGenerator:
   # files:
   # - longsecret.txt
   literals:
-  - admin-password="admin"
-  - admin-token="admin"
+  - admin-password="password"
+  - admin-token="password"
+  - influxdb-user="admin"
+  - influxdb-password="password"
 
 
 images:
