--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -28,19 +28,21 @@ helmCharts:
   #       # token: admin
   #   # namespace: tick-stack
 
-  - name: telegraf-operator
-    repo: https://helm.influxdata.com/
-    version: 1.3.10
-    # version: 1.8.20
-    releaseName: tick
-    # namespace: tick-stack
-    valuesInline:
-      outputs:
-        - influxdb:
-            urls:
-              - http://tick-influxdb.tick:8086
-            database:
-              telegraf
+  # - name: telegraf-operator
+  #   repo: https://helm.influxdata.com/
+  #   version: 1.3.10
+  #   # version: 1.8.20
+  #   releaseName: tick
+  #   # namespace: tick-stack
+  #   valuesInline:
+  #     outputs:
+  #       - influxdb:
+  #           urls:
+  #             - http://tick-influxdb.tick:8086
+  #           database:
+  #             telegraf
+
+              
   - name: telegraf
     repo: https://helm.influxdata.com/
     version: 1.8.22
