--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -12,11 +12,12 @@ helmCharts:
     repo: https://helm.influxdata.com/
     version: 2.1.1
     releaseName: tick
-    valuesInline:
-      adminUser:
-        existingSecret: influxdb-auth
+    # valuesInline:
+    #   adminUser:
+    #     existingSecret: influxdb-auth
         # password: admin 
         # token: admin
+
   # - name: influxdb
   #   repo: https://helm.influxdata.com/
   #   version: 4.12.0
