--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -3,10 +3,10 @@ resources:
 
 namespace: dev
 
-patchesStrategicMerge:
+# patchesStrategicMerge:
+#   - frontend-deployment-patch.yaml
   # - backend-deployment-patch.yaml
   # - backend-service-patch.yaml
-  - frontend-deployment-patch.yaml
   # - frontend-service-patch.yaml
 # add dev label to all resources
 commonLabels:
@@ -31,7 +31,7 @@ patches:
     patch: |-
       - op: add
         path: /spec/rules/0/host
-        value: 'dev1.aam.localhost'
+        value: 'dev.aam.localhost'
 
 
 # patchesStrategicMerge:
