--- a/base/tick/charts/telegraf-operator/values.yaml
+++ b/base/tick/charts/telegraf-operator/values.yaml
@@ -11,12 +11,38 @@ classes:
     infra: |
       [[outputs.influxdb]]
         urls = ["http://influxdb.influxdb:8086"]
+      [[outputs.influxdb_v2]]
+        urls = ["http://tick-influxdb2.tick"]
+        token = "yRBcbJCaqGqxDXbZruVKhjOEZZfjikIf 
+        organization = "demo"
+        bucket = "demo"
       [global_tags]
         env = "ci"
         hostname = "$HOSTNAME"
         nodename = "$NODENAME"
         type = "infra"
-
+    default: |
+      [[outputs.influxdb_v2]]
+        urls = ["http://tick-influxdb2.tick"]
+        token = "yRBcbJCaqGqxDXbZruVKhjOEZZfjikIf 
+        organization = "demo"
+        bucket = "demo"
+      [global_tags]
+        env = "ci"
+        hostname = "$HOSTNAME"
+        nodename = "$NODENAME"
+        type = "default"
+    app: |
+      [[outputs.influxdb_v2]]
+        urls = ["http://tick-influxdb2.tick"]
+        token = "yRBcbJCaqGqxDXbZruVKhjOEZZfjikIf 
+        organization = "demo"
+        bucket = "demo"
+      [global_tags]
+        env = "ci"
+        hostname = "$HOSTNAME"
+        nodename = "$NODENAME"
+        type = "app"
 certManager:
   enable: false
 
