--- a/base/tick/charts/telegraf-operator/values.yaml
+++ b/base/tick/charts/telegraf-operator/values.yaml
@@ -12,7 +12,7 @@ classes:
       [[outputs.influxdb]]
         urls = ["http://influxdb.influxdb:8086"]
       [[outputs.influxdb_v2]]
-        urls = ["http://tick-influxdb2.tick"]
+        urls = ["http://tick-influxdb2.tick:80"]
         token = "yRBcbJCaqGqxDXbZruVKhjOEZZfjikIf"
         organization = "demo"
         bucket = "demo"
