--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -35,13 +35,13 @@ helmCharts:
     # version: 1.8.20
     releaseName: tick
     # namespace: tick-stack
-    valuesInline:
-      outputs:
-        - influxdb:
-            urls:
-              - http://tick-influxdb.tick:8086
-            database:
-              telegraf
+    # valuesInline:
+    #   outputs:
+    #     - influxdb:
+    #         urls:
+    #           - http://tick-influxdb.tick:8086
+    #         database:
+    #           telegraf
 
               
   - name: telegraf
