--- a/base/tick/charts/telegraf/values.yaml
+++ b/base/tick/charts/telegraf/values.yaml
@@ -29,8 +29,8 @@ volumes:
     name: "telegraf-output-influxdb2"
 mountPoints:
 - name: telegraf-output-influxdb2
-  mountPath: /etc/telegraf/conf.d
-  subPath: influxdb2.conf
+  mountPath: /etc
+  subPath: telegraf/conf.d/influxdb2.conf
 
 ## Configure resource requests and limits
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
